# consume_on_drop

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: gfx_hal.rs
src/: lib.rs
